fix(docs): fix syntax highlight in dark mode

--- a/apps/website/src/app.css
+++ b/apps/website/src/app.css
@@ -50,14 +50,14 @@
 
 html.dark .code-surface,
 html.rp-dark .code-surface,
-html.dark .shiki,
-html.rp-dark .shiki {
+html.dark .code-surface .shiki,
+html.rp-dark .code-surface .shiki {
   background-color: var(--shiki-dark-bg) !important;
   color: var(--shiki-dark) !important;
 }
 
-html.dark .shiki span,
-html.rp-dark .shiki span {
+html.dark .code-surface .shiki span,
+html.rp-dark .code-surface .shiki span {
   color: var(--shiki-dark) !important;
   font-style: var(--shiki-dark-font-style) !important;
   font-weight: var(--shiki-dark-font-weight) !important;
